Attempted fix to flicker by forcing GPU acceleration on background scroll

--- a/styles.css
+++ b/styles.css
@@ -252,6 +252,7 @@ a {
 }
 
 #nav-background-texture{
+    transform: translate3d(0,0,0);
     position: fixed;
     height: 100%;
     width: 100%;
